# Example-GUI-OpenCL-Raytracer

./: .gitignore  CMakeLists.txt  README.md  main.c  rayinteractive.c  scene_dump.c
scenes/: render.map
src/: cpu_obj.c  cpu_obj.h  cpu_ray.c  cpu_ray.h  opencl_wrap.c  opencl_wrap.h  primitives.cl  raygen.cl  raytracing.cl  types.cl
src/cl/: primitives.cl  raygen.cl  raytracing.cl  types.cl
